--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "tailwindcss": "^3.3.2",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "^5.0.2",
-    "vite": "^4.4.0"
+    "vite": "^4.4.0",
+    "vite-plugin-pwa": "^0.16.4"
   }
 }
