--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@capacitor/status-bar": "^5.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.6",
     "class-variance-authority": "^0.6.1",
@@ -19,6 +20,8 @@
     "lucide-react": "^0.259.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^5.3.4",
+    "react-router-dom": "^5.3.4",
     "tailwind-merge": "^1.13.2"
   },
   "devDependencies": {
@@ -27,6 +30,8 @@
     "@types/node": "^20.4.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/react-router": "^5.1.20",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "@vitejs/plugin-react": "^4.0.1",
@@ -41,12 +46,14 @@
     "eslint-plugin-tailwindcss": "^3.13.0",
     "postcss": "^8.4.25",
     "postcss-focus-visible": "^9.0.0",
+    "postcss-preset-env": "^9.0.0",
     "pre-commit": "^1.2.2",
     "prettier": "^3.0.0",
+    "pullstate": "^1.25.0",
+    "reselect": "^4.1.8",
     "tailwindcss": "^3.3.2",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "^5.0.2",
-    "vite": "^4.4.0",
-    "vite-plugin-pwa": "^0.16.4"
+    "vite": "^4.4.0"
   }
 }
