--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "focus-visible": "^5.2.0",
+    "framework7-icons": "^5.0.5",
     "konsta": "^2.0.0",
     "lucide-react": "^0.259.0",
     "react": "^18.2.0",
