--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "focus-visible": "^5.2.0",
-    "konsta": "^2.0.0",
     "lucide-react": "^0.259.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,6 +25,7 @@
     "tailwind-merge": "^1.13.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^20.4.1",
     "@types/react": "^18.2.14",
@@ -37,7 +37,9 @@
     "@vitejs/plugin-react": "^4.0.1",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.44.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
@@ -46,6 +48,7 @@
     "postcss-focus-visible": "^9.0.0",
     "postcss-preset-env": "^9.0.0",
     "pre-commit": "^1.2.2",
+    "prettier": "^3.0.0",
     "pullstate": "^1.25.0",
     "reselect": "^4.1.8",
     "tailwindcss": "^3.3.2",
